# virtual_wallet_architecture_project

./: Cargo.toml  alert_rules.yml  docker-compose.yaml  prometheus.yml
balance-service/: Cargo.toml  Dockerfile
balance-service/migrations/: 20260527160000_init.sql
balance-service/src/: commands.rs  domain.rs  dto.rs  main.rs  queries.rs  store.rs
notification-service/: Cargo.toml  Dockerfile
notification-service/src/: main.rs
shared-contract/: Cargo.toml
shared-contract/src/: lib.rs
user-service/: Cargo.toml  Dockerfile
user-service/migrations/: 20260527155321_init.sql
user-service/src/: main.rs  models.rs
