[package]
name = "notification-service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
futures-util = "0.3.32"
lapin = "4.10.0"
serde_json = "1.0.150"
shared-contract = { version = "0.1.0", path = "../shared-contract" }
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
