[package]
name = "user-service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
shared-contract = { version = "0.1.0", path = "../shared-contract" }
sqlx = { version = "0.9.0", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "macros"] }
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
utoipa = { version = "5.5.0", features = ["axum_extras", "uuid"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
uuid = { version = "1.23.1", features = ["v4", "serde"] }
validator = { version = "0.20.0", features = ["derive"] }
redis = { version = "1.2.1", features = ["tokio-comp"] }
lapin = "4.10.0"
metrics = "0.24.6"
metrics-exporter-prometheus = "0.18.3"
sysinfo = "0.33.0"